Added CSS styling to results container, so that the longer generated passwords remain in the container field. Added description, table of contents, user story, and a features section to the README.

--- a/style.css
+++ b/style.css
@@ -47,12 +47,15 @@ input[type=checkbox] {
 	letter-spacing: 1px;
 	padding: 12px 10px;
 	height: 50px;
-	width: 100%;
+    width: 100%;
 }
 
 .resultContainer #result {
   	word-wrap: break-word;
-	max-width: calc(100% - 40px);
+    max-width: calc(100% - 40px);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .resultContainer .btn {
